record the clicks that are made and add to the user score

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
         <title>Crystal Collector</title>
         <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-        
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="assets/javascript/game.js"></script>
     </head>
+
     <body>
         <div class="header"><h1>Crystal Collector</h1></div>
         <div class="directions">
@@ -16,6 +18,10 @@
 
         </div>
         <div class="crystals">
+            <div id="greenJewel">GREEN</div><hr>
+            <div id="purpleJewel">PURPLE</div><hr>
+            <div id="redJewel">RED</div><hr>
+            <div id="yellowJewel">YELLOW</div><hr>
 
         </div>
         <div class="userScore">
