put in a background image and added instructions for the user

--- a/index.html
+++ b/index.html
@@ -10,25 +10,38 @@
     </head>
 
     <body>
-        <div class="header"><h1>Crystal Collector</h1></div>
-        <div class="directions">
+        <div class="header"><h1>Crystal Collector</h1><hr></div>
+        <div class="container">
+            <div class="directions">
+                <p>At the start of the game you are given a target number. Your goal is to get your score to the target number without going over.</p>
+                <p>To add to your score you need to click on the jewels belew. Each jewel is randomly given a point value. However, the amount of points that each jewel is worth is hidden from you.</p>
+                <p>When you get to the target number or go over you will be given a new target number and a new set of points for each jewel.</p>
+                <p>Think you can get to the target without going over?</p>
+            </div>
+            <div class="endNumber">
+                <p>The target number to get is </p>
+            </div>
+            <div class="crystals">
+            <div id="greenJewel">
+                <img src="assets/images/green.jpg" alt="Green Jewel" style="width:75px;height:75px;">
+            </div>
+            <div id="purpleJewel">
+                <img src="assets/images/purple.jpg" alt="Purple Jewel" style="width:75px;height:75px;">
+            </div>
+            <div id="redJewel">
+                <img src="assets/images/red.jpg" alt="Red Jewel" style="width:75px;height:75px;">
+            </div>
+            <div id="yellowJewel">
+                <img src="assets/images/yellow.jpg" alt="Yellow Jewel" style="width:75px;height:75px;"  >
+            </div>
 
-        </div>
-        <div class="target">
+            </div>
+            <div id="userSum">
+                <p>You current score is </p>
+            </div>
+            <div id="wins">
 
-        </div>
-        <div class="crystals">
-            <div id="greenJewel">GREEN</div><hr>
-            <div id="purpleJewel">PURPLE</div><hr>
-            <div id="redJewel">RED</div><hr>
-            <div id="yellowJewel">YELLOW</div><hr>
-
-        </div>
-        <div class="userScore">
-
-        </div>
-        <div class="wins">
-
+            </div>
         </div>
     </body>
 </html>
