Adjusted spacing in the directions to make it easier to read

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
             <!-- Directions on how to play the game -->
             <div class="directions">
-                <p>At the start of the game you are given a target number. Your goal is to get your score to the target number without going over.</p>
-                <p>To add to your score you need to click on the jewels belew. Each jewel is randomly given a point value. However, the amount of points that each jewel is worth is hidden from you.</p>
-                <p>When you get to the target number or go over you will be given a new target number and a new set of points for each jewel.</p>
+                <p>At the start of the game you are given a target number. Your goal is to get your score to the target number without going over.</p><br>
+                <p>To add to your score you need to click on the jewels belew. Each jewel is randomly given a point value. However, the amount of points that each jewel is worth is hidden from you.</p><br>
+                <p>When you get to the target number or go over you will be given a new target number and a new set of points for each jewel.</p><br>
                 <p>Think you can get to the target without going over?</p>
             </div>
 
