fixed css error that was covering jewel buttons

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
             <!-- This keeps track of wins and loses -->
             <div id="overallScore"> 
                 <div id="wins">
-                    <p>Wins: 0</p>
-                </div><hr>
+                    <p id="winCount">Wins: 0<hr></p>  
+                </div>
                 <div id="loses">
-                    <p>Loses: 0</p>
+                    <p id="lossCount">Loses: 0</p>
                 </div>
             </div>
         </div>
