--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Crystal Collector</title>
-        <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script type="text/javascript" src="assets/javascript/game.js"></script>
@@ -22,29 +22,32 @@
                 <p>Think you can get to the target without going over?</p>
             </div>
 
-            <!-- Images of the crystals that will have a point value that gets added when the user clicks on them -->
-            <div class="crystals">
-                <div id="greenJewel">
-                    <img src="assets/images/green.jpg" alt="Green Jewel" style="width:75px;height:75px;">
+            <!-- Row to hold crystal images and target number plus score -->
+            <div class="row">
+                <!-- Images of the crystals that will have a point value that gets added when the user clicks on them -->
+                <div class="col-sm-12 crystals">
+                    <div id="greenJewel">
+                        <img src="assets/images/green.jpg" alt="Green Jewel" style="width:75px;height:75px;">
+                    </div>
+                    <div id="purpleJewel">
+                        <img src="assets/images/purple.jpg" alt="Purple Jewel" style="width:75px;height:75px;">
+                    </div>
+                    <div id="redJewel">
+                        <img src="assets/images/red.jpg" alt="Red Jewel" style="width:75px;height:75px;">
+                    </div>
+                    <div id="yellowJewel">
+                        <img src="assets/images/yellow.jpg" alt="Yellow Jewel" style="width:75px;height:75px;"  >
+                    </div>
                 </div>
-                <div id="purpleJewel">
-                    <img src="assets/images/purple.jpg" alt="Purple Jewel" style="width:75px;height:75px;">
-                </div>
-                <div id="redJewel">
-                    <img src="assets/images/red.jpg" alt="Red Jewel" style="width:75px;height:75px;">
-                </div>
-                <div id="yellowJewel">
-                    <img src="assets/images/yellow.jpg" alt="Yellow Jewel" style="width:75px;height:75px;"  >
-                </div>
-            </div>
 
-            <!-- This keeps track of the target number and the user's current score -->
-            <div class="currentGame">
-                <div id="endNumber">
-                    <p></p>
-                </div><hr>
-                <div id="userSum">
-                    <p></p>
+                <!-- This keeps track of the target number and the user's current score -->
+                <div class="col-sm-12 currentGame">
+                    <div id="endNumber">
+                        <p></p>
+                    </div><hr>
+                    <div id="userSum">
+                        <p></p>
+                    </div>
                 </div>
             </div>
 
